# verify-files-2

./: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/aladdin_marketplace/: Cargo.toml
programs/aladdin_marketplace/src/: errors.rs  lib.rs  state.rs
